--- a/index.html
+++ b/index.html
@@ -5,12 +5,61 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- Main CSS -->
+    <link rel="stylesheet" href="./asset/css/main.css">
   </head>
   <body>
-      
+        <header>
+           <div class="header__top container " id="headerTop">
+            <div class="row">
+                <div class="col-4 header__col">
+                    <form class="form-inline my-2 ">
+                        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                        <button id="btnSearch" class=" btn btn-outline-success my-2 my-sm-0" type="submit"><i class="fa fa-search"></i></button>
+                      </form>
+                </div>
+                <div class="col-4 header__col">
+                    <div class="header__logo">
+                        <h1><span class="text-danger">S</span>HOESHOP</h1>
+                    </div>
+                </div>
+                <div class="col-4 header__col header__bag">
+                  <a href="#"><i class="fas fa-shopping-cart "></i></a>
+                  <button type="button" class="btn btn-primary ml-1">Đăng nhập</button>
+                  <button type="button" class="btn btn-success ml-1">Đăng ký</button>
+              </div>
+
+            </div>
+           </div>
+           <div class="header__menu" id="headerMenu">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light header__nav">
+              
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item active">
+                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Features</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Pricing</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link disabled">Disabled</a>
+                  </li>
+                </ul>
+              </div>
+            </nav>
+           </div>
+        </header>  
+        <section class="carousel"></section>
+        <section class="products"></section>
+        <footer></footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
